Stopgap solution to fix footer ghosting on the page

--- a/web/css/gtc_office.css
+++ b/web/css/gtc_office.css
@@ -1,12 +1,3 @@
-#footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	/* Set the fixed height of the footer here */
-	height: 30px;
-	background-color: #f5f5f5;
-}
-
 #footerContent {
 	text-align: center;
 }
